--- a/TicketMate/TicketMate.Admin.Application/TicketMate.Admin.Application.csproj
+++ b/TicketMate/TicketMate.Admin.Application/TicketMate.Admin.Application.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TicketMate.Admin.Domain\TicketMate.Admin.Domain.csproj" />
+    <ProjectReference Include="..\TicketMate.Admin.Infastructure\TicketMate.Admin.Infastructure.csproj" />
   </ItemGroup>
 
   
