--- a/TicketMate/TicketMate.Payment/appsettings.json
+++ b/TicketMate/TicketMate.Payment/appsettings.json
@@ -12,6 +12,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    //"TicketMateConnection": "Server=DESKTOP-JOFF0M0; Database=TicketMate; Trusted_Connection=True;TrustServerCertificate=true"
     "TicketMateConnection": "Server=tcp:ticketmateserver.database.windows.net,1433;Initial Catalog=PTEScentralDb;Persist Security Info=False;User ID=adminPTES;Password=#ticket@MS;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
