throw the controller implementation to service

--- a/TicketMate/TicketMate.Admin.Api/appsettings.json
+++ b/TicketMate/TicketMate.Admin.Api/appsettings.json
@@ -2,7 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=SHANUKA\\SQLEXPRESS;Database=MyFirstDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true",
     //"AuthConnection": "Server=SHANUKA\\SQLEXPRESS;Database=UserAuthDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-    "AuthConnection": "Server=tcp:ticketmateserver.database.windows.net,1433;Initial Catalog=PTEScentralDb;Persist Security Info=False;User ID=adminPTES;Password=#ticket@MS;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"AuthConnection": "Server=tcp:ticketmateserver.database.windows.net,1433;Initial Catalog=PTEScentralDb;Persist Security Info=False;User ID=adminPTES;Password=#ticket@MS;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AuthConnection": "Server=tcp:ptesserver.database.windows.net,1433;Initial Catalog=ptescentral;Persist Security Info=False;User ID=AdminPTES;Password=PTES@admin;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
 
   },
   "Logging": {
