user Authentication added, google map added

--- a/TicketMate/TicketMate.Admin.Domain/TicketMate.Admin.Domain.csproj
+++ b/TicketMate/TicketMate.Admin.Domain/TicketMate.Admin.Domain.csproj
@@ -28,4 +28,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
   </ItemGroup>
 
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\TicketMate.Booking.Domain\TicketMate.Booking.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
