admin part updated code

--- a/TicketMate/TicketMate.Admin.Api/appsettings.json
+++ b/TicketMate/TicketMate.Admin.Api/appsettings.json
@@ -13,5 +13,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "KEY": "BUOSYjs5gpoosFLUSJ75JJHst6yjjjST5rt65SY77uhSYSKo098HHhgst",
+    "Issuer": "https://localhost:7196/",
+    "Audience": "https://localhost:7196/"
+  }
 }
