--- a/TicketMate/TicketMate.Payment/appsettings.json
+++ b/TicketMate/TicketMate.Payment/appsettings.json
@@ -1,9 +1,9 @@
 {
 
-  "EmailAddress": "himashasandeeepani111@gmail.com",
+  "EmailAddress": "ticketmateptes@gmail.com",
   "EmailHost": "smtp.gmail.com",
-  "EmailUserName": "himashasandeepani111@gmail.com",
-  "EmailPassword": "tbnp xltk wpkg rrvh",
+  "EmailUserName": "ticketmateptes@gmail.com",
+  "EmailPassword": "hupn sxzh vmmo ckub",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -12,9 +12,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"TicketMateConnection": "Server=DESKTOP-JOFF0M0; Database=TicketMate; Trusted_Connection=True;TrustServerCertificate=true"
-    //"TicketMateConnection": "Server=tcp:ticketmateserver.database.windows.net,1433;Initial Catalog=PTEScentralDb;Persist Security Info=False;User ID=adminPTES;Password=#ticket@MS;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    
     "TicketMateConnection": "Server=tcp:ptesserver.database.windows.net,1433;Initial Catalog=ptescentral;Persist Security Info=False;User ID=AdminPTES;Password=PTES@admin;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "JWT": {
+    "KEY": "BUOSYjs5gpoosFLUSJ75JJHst6yjjjST5rt65SY77uhSYSKo098HHhgst",
+    "Issuer": "https://localhost:7196/",
+    "Audience": "https://localhost:7196/"
   },
 
   "BraintreeGateway": {
