--- a/TicketMate/TicketMate.Payment/appsettings.json
+++ b/TicketMate/TicketMate.Payment/appsettings.json
@@ -25,7 +25,7 @@
     "Environment": "sandbox",
     "MerchantId": "qz874t3k95hty9wc",
     "PublicKey": "ywg4qtr8csf9sfbt",
-    "PrivateKey": "c2254b93a19bf43df5c86e2e6a2328bf"
+    "PrivateKey": "private key here"
 
   }
 }
